//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.accumulo.core.compaction.protobuf";
option java_outer_classname = "TabletServerProto";

import "data.proto";
import "manager.proto";

package tabletserver;


message PExternalCompactionJob {
  optional string externalCompactionId = 1;
  optional data.PKeyExtent extent = 2;
  repeated tabletserver.PInputFile files = 3;
  optional tabletserver.PIteratorConfig iteratorSettings = 4;
  optional string outputFile = 5;
  optional bool propagateDeletes = 6;
  optional tabletserver.PCompactionKind kind = 7;
  optional manager.PFateId fateId = 8;
  map<string, string> overrides = 9;
}

message PInputFile {
  // This is nullable in Thrift but I am not marking as optional as
  // I think it should always be set
  string metadataFileEntry = 1;
  int64 size = 2;
  int64 entries = 3;
  int64 timestamp = 4;
}

message PIteratorSetting {
  int32 priority = 1;
  string name = 2;
  string iteratorClass = 3;
  map<string, string> properties = 4;
}

message PIteratorConfig {
  repeated PIteratorSetting iterators = 1;
}

enum PCompactionKind {
  // SELECTOR was removed and used to be zero
  // However protobuf3 requires starting with 0 which is the default
  UNKNOWN = 0;
  SYSTEM = 1;
  USER = 2;
}

message PCompactionStats {
  int64 entriesRead = 1;
  int64 entriesWritten = 2;
  int64 fileSize = 3;
}
